force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/Apttus_Approval__Term_Exception_Approval__c.object-meta.xml
<CustomObject>
    <description>Required approvals for a given Term Exception</description>
    <label>Term Exception Approval</label>
    <nameField>
        <displayFormat>TEA-{0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Exception Approvals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>