force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Assignee_Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assignee_Description__c</fullName>
    <description>The assignee description</description>
    <label>Assignee Description</label>
    <type>TextArea</type>
</CustomField>