force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Assignee_Id__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assignee_Id__c</fullName>
    <description>This field holds the ID of the queue, role, or forecast role that is assigned to the request.  This field is not used when the assignee type is user.</description>
    <inlineHelpText>This field holds the ID of the queue, role, or forecast role that is assigned to the request.  This field is not used when the assignee type is user.</inlineHelpText>
    <label>Assignee Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>