force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Assignee_Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assignee_Type__c</fullName>
    <description>Denotes the assignee type</description>
    <label>Assignee Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approval Matrix</fullName>
            </value>
            <value>
                <fullName>Rule</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Custom Assignee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>