force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Assignee_User__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assignee_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to specify a user assignee using standard salesforce lookup behavior instead of having to type the user&apos;s name.  Using standard lookup prevents typing errors and ensures that the user is correctly assigned regardless of locale settings.</description>
    <inlineHelpText>Used to specify a user assignee using standard salesforce lookup behavior instead of having to type the user&apos;s name.  Using standard lookup prevents typing errors and ensures that the user is correctly assigned regardless of locale settings.</inlineHelpText>
    <label>Assignee User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Term_Exception_Approvals</relationshipName>
    <type>Lookup</type>
</CustomField>