force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Assignee_Value__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Assignee_Value__c</fullName>
    <description>Denotes the assignee type.  If the type is &apos;Role&apos;, this field is the role name.  For type Approval Matrix, this value is a string of the form &quot;Level X&quot;, where X ranges from 1 to 6.  This field is not used when the assignee type is user.</description>
    <inlineHelpText>Denotes the assignee type.  If the type is &apos;Role&apos;, this field is the role name.  For type Approval Matrix, this value is a string of the form &quot;Level X&quot;, where X ranges from 1 to 6.  This field is not used when the assignee type is user.</inlineHelpText>
    <label>Assignee Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>