force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__AutoEscalate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoEscalate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is set to true if this term exception approval should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</description>
    <inlineHelpText>This field is set to true if this term exception approval should be auto-escalated by the system if it not approved, rejected, or reassigned by the expected completion date.</inlineHelpText>
    <label>Auto Escalate</label>
    <type>Checkbox</type>
</CustomField>