force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__DependsOn__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__DependsOn__c</fullName>
    <label>Depends On</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>