force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__EscalateToId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__EscalateToId__c</fullName>
    <description>The id of the assignee the request will be escalated to if it is escalated at the term exception approval level.</description>
    <inlineHelpText>The id of the assignee the request will be escalated to if it is escalated at the term exception approval level.</inlineHelpText>
    <label>Escalate To Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>