force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__ExpectedHoursToComplete__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ExpectedHoursToComplete__c</fullName>
    <description>The number of expected hours that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</description>
    <inlineHelpText>The number of expected hours that this term exception approval needs to be completed in (approved or rejected) before a request is automatically escalated.</inlineHelpText>
    <label>Expected Hours To Complete</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>