force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__FilterLogic__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__FilterLogic__c</fullName>
    <description>The criteria filter logic expression</description>
    <label>Filter Logic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>