force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Send_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates whether an email notification should be sent</description>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>