force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/fields/Apttus_Approval__Term_Exception__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__Term_Exception__c</fullName>
    <description>Denotes the term exception master record associated with this term exception approver record.</description>
    <inlineHelpText>Denotes the term exception master record associated with this term exception approver record.</inlineHelpText>
    <label>Term Exception</label>
    <referenceTo>Apttus__Term_Exception__c</referenceTo>
    <relationshipLabel>Term Exception Approvals</relationshipLabel>
    <relationshipName>Approvals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>