force-app/main/default/objects/Apttus_Approval__Term_Exception_Approval__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__Term_Exception__c</columns>
    <columns>Apttus_Approval__Assignee_Type__c</columns>
    <columns>Apttus_Approval__Assignee_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>